# rifles

./: Cargo.toml  README.md  flake.nix
src/: contents.rs  input.rs  main.rs  state.rs
