[package]
name = "rfiles"
version = "0.1.0"
authors = ["nate <nate.givens03@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "*"
async-std = {version="0.99", features=["unstable"]}
# futures-preview = "0.2.2"
